[gd_scene load_steps=7 format=3 uid="uid://cav8u8ekjjhdi"]

[ext_resource type="PackedScene" uid="uid://cqknl4fa1ofy" path="res://Props/Weapons/WeaponBase.tscn" id="1_detkd"]
[ext_resource type="PackedScene" uid="uid://c7isot5rpcwus" path="res://Props/Weapons/RifleBase.tscn" id="2_alsi6"]
[ext_resource type="Script" path="res://Testing/TestWeapon.gd" id="2_ihoid"]
[ext_resource type="AudioStream" uid="uid://cqi8csv8ynwit" path="res://Props/Weapons/RifleShoot.ogg" id="3_clpu8"]
[ext_resource type="Resource" uid="uid://byfp57m203jiy" path="res://RifleStats.tres" id="3_w1qhh"]
[ext_resource type="AudioStream" uid="uid://c1rwua6fwo1vq" path="res://Props/Weapons/RifleReload.ogg" id="4_pf3cb"]

[node name="Rifle" instance=ExtResource("1_detkd")]
script = ExtResource("2_ihoid")
stats = ExtResource("3_w1qhh")

[node name="Mesh" parent="." index="0" instance=ExtResource("2_alsi6")]
layers = 4

[node name="ShootAudio" parent="." index="1"]
stream = ExtResource("3_clpu8")
max_db = 0.0

[node name="ReloadAudio" parent="." index="2"]
stream = ExtResource("4_pf3cb")
